# module-physics-bullet

./: .gitignore  .travis.yml  README.md  bitbucket-pipelines.yml  deploy-maven-central.sh  pom.xml
src/main/c++/: DynamicMotionState.h  JniBody.cpp  JniBody.h  JniGhost.cpp  JniWorld.cpp  JniWorld.h  RigidBody.h  World.cpp  World.h  stdafx.cpp
src/main/includes/: DynamicMotionState.hpp  JniBody.h  JniGhost.h  JniUtil.h  JniWorld.h  KinematicMotionState.h  KinematicMotionState.hpp  RigidBody.hpp  World.h  World.hpp  stdafx.h
src/main/java/: module-info.java
src/main/java/be/yildiz/module/physics/bullet/: BulletBody.java  BulletDynamicBody.java  BulletGhostObject.java  BulletKinematicBody.java  BulletPhysicEngine.java  BulletPhysicEngine.java~  BulletPhysicObjectBuilder.java  BulletShapeProvider.java  BulletStaticBody.java  BulletWorld.java  IdNotProvidedException.java  ShapeNotProvidedException.java  package-info.java
src/main/java/be/yildizgames/module/physics/bullet/: BulletBody.java  BulletDynamicBody.java  BulletGhostObject.java  BulletKinematicBody.java  BulletPhysicEngine.java  BulletPhysicEngineProvider.java  BulletPhysicObjectBuilder.java  BulletStaticBody.java  BulletWorld.java  package-info.java
src/main/java/be/yildizgames/module/physics/bullet/dummy/: DummyBulletWorldImplementation.java
src/main/java/be/yildizgames/module/physics/bullet/exception/: IdNotProvidedException.java  ShapeNotProvidedException.java
src/main/java/jni/: BulletBodyNative.java  BulletDynamicBodyNative.java  BulletGhostObjectNative.java  BulletKinematicBodyNative.java  BulletWorldNative.java  package-info.java
src/main/resources/main/c++/: JniBody.cpp  JniGhost.cpp  JniWorld.cpp  World.cpp  stdafx.cpp  test-World.cpp  test-main.cpp
src/main/resources/main/includes/: DynamicMotionState.hpp  JniBody.h  JniGhost.h  JniUtil.h  JniWorld.h  KinematicMotionState.hpp  RigidBody.hpp  World.hpp  catch.hpp  stdafx.h
src/main/scripts/: mingw-toolchain.cmake
src/main/scripts/linux64/: CMakeLists.txt  build.sh  build_bullet2.sh  build_sonar.sh  build_yildiz-bullet2.sh  build_yildiz-bullet2_sonar.sh
src/main/scripts/win32/: CMakeLists.txt  build.sh  build_yildiz-bullet2.sh
src/main/scripts/win32/bullet/lib/cmake/bullet/: BulletConfig.cmake
src/main/scripts/win32/bullet/lib/pkgconfig/: bullet.pc
src/main/scripts/win64/: CMakeLists.txt  build.sh  build_bullet2.sh  build_yildiz-bullet2.sh
src/test/java/be/yildiz/module/physics/bullet/: BulletPhysicObjectBuilderTest.java
src/test/java/be/yildizgames/module/physics/bullet/: BulletPhysicObjectBuilderTest.java  BulletWorldTest.java
(+7 files in other folders)
